<resources>
    <string name="app_name">VOXOX</string>

    <string name="google_maps_api_key">AIzaSyBiUpcCp32Ry80BenhEKcrKjIoOtFO-r8Q</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_support">Support</string>
    <string name="menu_bookride">Book Ride</string>
    <string name="menu_rideHistory">Ride History</string>
    <string name="menu_notification">Notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
